--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -1,7 +1,7 @@
 {% load filters %}
 
 <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
-    <a class="navbar-brand" href="index.html">Navbar</a>
+    <a class="navbar-brand" href="{% url 'product:product_list' %}">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
