--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -6,17 +6,37 @@
 <div class="row">
 
     {% if not request.user.is_authenticated %}
-    <div class="col">
-        <h1>Login</h1>
+    <div class="col-lg mt-3">
+        <h4>Login</h4>
+        <p>Please input your username and password in order to log in.</p>
+
+        <form method="POST" action="{% url 'profiles:login' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="InputUsername1">Username:</label>
+                <input type="text" name="username" class="form-control" id="InputUsername1" aria-describedby="usernameHelp"
+                    placeholder="Enter your username">
+            </div>
+            <div class="form-group">
+                <label for="InputPassword1">Password:</label>
+                <input type="password" name="password" class="form-control" id="InputPassword1" placeholder="Enter your password">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block btn-lg">Login</button>
+        </form>
     </div>
     {% endif %}
 
-    <div class="col">
+    <div class="col-lg mt-3">
 
         {% if not request.user.is_authenticated %}
-        <h1>Register</h1>
+        <h4>Register</h4>
+        <p>
+            If you haven't registered yet, you can do it by filling in
+            the form below.
+        </p>
         {% else %}
-        <h1>Update profile</h1>
+        <h4>Update profile</h4>
+        <p>You can use the form below in order to update your profile data.</p>
         {% endif %}
 
         <form action="" method="post">
