--- a/product/templates/product/cart.html
+++ b/product/templates/product/cart.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 
-{% load static %}
 {% load filters %}
 
 {% block content %}
@@ -9,57 +8,8 @@
 
 <div class="row mt-3">
     <div class="col">
-        <h3>Carrinho de compras</h3>
-        <p class="lead">Os produtos, quantidades e preços que você escolheu.</p>
-
-        <div class="table-responsive">
-            <table class="table">
-                <tr>
-                    <th class="d-none d-lg-block">Imagem</th>
-                    <th>Produto</th>
-                    <th>V.</th>
-                    <th>QTD.</th>
-                    <th>Preço</th>
-                    <th>Total</th>
-                </tr>
-
-                {% for line in cart.values %}
-                <tr>
-                    <td class="d-none d-lg-block">
-                        <img class="cart-img" src="{% get_media_prefix %}{{ line.image }}">
-                    </td>
-                    <td>
-                        <a href="{% url 'product:details' line.slug %}">
-                            {{ line.product_name }}
-                        </a>
-                        <a class="ml-3" href="{% url 'product:remove_from_cart' %}?vid={{ line.variation_id }}">
-                            <i class="fas fa-times-circle text-danger" aria-hidden="true"></i>
-                        </a>
-                    </td>
-                    <td>{{ line.variation_name }}</td>
-                    <td>
-                        {{ line.amount }}
-                    </td>
-                    <td>
-                        {% if line.unit_promo_price %}
-                        {{ line.unit_promo_price|format_price }}
-                        {% else %}
-                        {{ line.unit_price|format_price }}
-                        {% endif %}
-                    </td>
-
-                    {% if line.total_promo_price %}
-                    <td>{{ line.total_promo_price|format_price }}</td>
-                    {% else %}
-                    <td>{{ line.total_price|format_price }}</td>
-                    {% endif %}
-
-                </tr>
-                {% endfor %}
-
-
-            </table>
-        </div>
+        <h3>Shopping cart</h3>
+        {% include "partials/_cart.html" %}
     </div>
 </div>
 
@@ -79,9 +29,15 @@
         </div>
     </div>
     <div class="col-lg mt-auto">
-        <a class="btn btn-lg btn-block btn-primary" href="#">
-            Finalizar a compra
+        {% if request.user.is_authenticated %}
+        <a class="btn btn-lg btn-block btn-primary" href="{% url 'product:order_summary' %}">
+            Checkout
         </a>
+        {% else %}
+        <a class="btn btn-lg btn-block btn-primary" href="{% url 'profiles:profile' %}">
+            Checkout
+        </a>
+        {% endif %}
     </div>
 </div>
 
@@ -89,8 +45,8 @@
 
 <div class="row mt-3">
     <div class="col">
-        <h3>Carrinho vazio</h3>
-        <p class="lead">Não há quaisquer produtos no seu carrinho.</p>
+        <h3>Empty cart</h3>
+        <p class="lead">There are no products in your shopping cart.</p>
     </div>
 </div>
 
