--- a/product/templates/product/order_summary.html
+++ b/product/templates/product/order_summary.html
@@ -64,7 +64,7 @@
 
 <div class="row">
     <div class="col">
-        <a class="btn btn-block btn-primary btn-lg" href="{% url 'order:pay' %}">
+        <a class="btn btn-block btn-primary btn-lg" href="{% url 'order:save' %}">
             Proceed with payment
         </a>
     </div>
