Lista de pedidos do utilizador e detalhes do pedido

--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -17,7 +17,8 @@
                     Profile
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'profiles:profile' %}">Update</a>
+                    <a class="dropdown-item" href="{% url 'order:list' %}">My orders</a>
+                    <a class="dropdown-item" href="{% url 'profiles:profile' %}">My account</a>
                     <a class="dropdown-item" href="{% url 'profiles:logout' %}">Logout</a>
                 </div>
             </li>
