--- a/order/templates/order/pay.html
+++ b/order/templates/order/pay.html
@@ -12,66 +12,11 @@
     </div>
 </div>
 
-<div class="row">
+{% include "partials/_order.html" %}
+
+<div class="row mt-4">
     <div class="col">
-        <h3>Order</h3>
-
-        <div class="row mt-4">
-            <div class="col-lg-2 font-weight-bold">Order nr:</div>
-            <div class="col-lg-4">{{ order.id }}</div>
-            <div class="col-lg-2 font-weight-bold">Total a pagar:</div>
-            <div class="col-lg-4">{{ order.total_value|format_price }}</div>
-
-            <div class="col-lg-2 font-weight-bold">QTD. Itens:</div>
-            <div class="col-lg-4">{{ order.total_amount }}</div>
-            <div class="col-lg-2 font-weight-bold">Status:</div>
-            <div class="col-lg-4">{{ order.get_status_display }}</div>
-        </div>
-
-        <div class="row mt-4">
-            <div class="col">
-                <h3>Products</h3>
-            </div>
-        </div>
-
-        <div class="table-responsive mt-3">
-            <table class="table">
-                <tr>
-                    <th class="d-none d-lg-block">Image</th>
-                    <th>Product</th>
-                    <th>V.</th>
-                    <th>Quantity</th>
-                    <th>Total</th>
-                </tr>
-
-                {% for line in order.orderitem_set.all %}
-                <tr>
-                    <td class="d-none d-lg-block">
-                        <img class="cart-img" src="{% get_media_prefix %}{{ line.image }}">
-                    </td>
-                    <td>{{ line.product }}</td>
-                    <td>{{ line.variation }}</td>
-                    <td>{{ line.amount }}</td>
-                    <td>
-                        {% if line.promo_price %}
-                            {{ line.promo_price|format_price }}
-                        {% else %}
-                            {{ line.price|format_price }}
-                        {% endif %}
-                    </td>
-                </tr>
-                {% endfor %}
-            </table>
-        </div>
-
-
-        <div class="row mt-4">
-            <div class="col">
-                <a href="#" class="btn btn-primary btn-block btn-lg">Pay</a>
-            </div>
-        </div>
-
-
+        <a href="#" class="btn btn-primary btn-block btn-lg">Pay</a>
     </div>
 </div>
 
