Títulos das páginas

--- a/order/templates/order/details.html
+++ b/order/templates/order/details.html
@@ -3,6 +3,8 @@
 {% load filters %}
 {% load static %}
 
+{% block title %}{{ order }} | {% endblock title %}
+
 {% block content %}
 
 {% include "partials/_order.html" %}
