--- a/order/templates/order/pay.html
+++ b/order/templates/order/pay.html
@@ -3,6 +3,8 @@
 {% load filters %}
 {% load static %}
 
+{% block title %}Payment | {% endblock title %}
+
 {% block content %}
 
 <div class="row">
