--- a/product/templates/product/order_summary.html
+++ b/product/templates/product/order_summary.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load filters %}
 
+{% block title %}Order summary | {% endblock title %}
+
 {% block content %}
 
 <div class="row mb-5">
