--- a/templates/partials/_nav.html
+++ b/templates/partials/_nav.html
@@ -24,7 +24,7 @@
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'profiles:profile' %}">Log in / Register</a>
+                <a class="nav-link" href="{% url 'profiles:profile' %}">Login / Register</a>
             </li>
             {% endif %}
 
@@ -44,8 +44,10 @@
             </li>
             {% endif %}
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="form-inline my-2 my-lg-0" method="GET" action="{% url 'product:search' %}">
+            <input name="term" value="{{ request.GET.term }}" 
+                class="form-control mr-sm-2" 
+                type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
